# ComfyUI-HYWorld2-Modded

./: .gitignore  CHANGELOG.MD  README.md  ROADMAP.md  install.py  pyproject.toml  requirements.txt
gsplat/: fused_ssim-1.0.0-cp312-cp312-win_amd64.whl  pytorch3d-0.7.8+pt2110.cu130.cp312.nopulsar-cp312-cp312-win_amd64.whl  pytorch3d-0.7.8+pt291.cu130.cp312.nopulsar-cp312-cp312-win_amd64.whl  recast-0.1.0-cp312-cp312-win_amd64.whl
hyworld2/panogen/: __init__.py  qwen_pano_comfy.py
hyworld2/worldgen/: RUN_LOCAL.md  gen_gs_data.py  llama_cpp_vlm_server.py  traj_generate.py  traj_render.py  video_gen.py  world_gs_trainer.py
hyworld2/worldgen/gs/: __init__.py  opencv.py
hyworld2/worldgen/models/: attention.py  worldstereo.py  worldstereo_wrapper.py
hyworld2/worldgen/src/: __init__.py  data_utils.py  distributed_compat.py  json_utils.py  navi_utils.py  panorama_utils.py  pointcloud.py  retrieval_wm.py  utils3d_compat.py  vlm_utils.py
hyworld2/worldrecon/: pipeline.py
nodes/: __init__.py  hyworld2_native.py  panorama_mapper.py  qwen_pano.py  splat_patch_poc.py  utils.py  world_mirror_v1.py  world_mirror_v2.py  world_stereo.py  worldgen.py
scripts/: build_gsplat.py  pipinstall.bat
tests/: test_world_stereo_nodes.py
web/gaussian_preview/: gaussian_preview.js
workflows/: HYMirror2-WorldStereo2-BaseModel.json  HYMirror2-WorldStereo2-NoExtras.json  World Generation Full.json  World-Mirror-panorama.json  World-Stereo-Light.json
worldstereo/: requirements.txt
worldstereo/models/: attention.py  worldstereo.py  worldstereo_wrapper.py
(+13 files in other folders)
