[project]
name = "comfyui-hyworld2"
version = "1.4.0"
description = "HY-World 2.0 ComfyUI nodes — WorldMirror V1 & V2 3D reconstruction"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "opencv-python",
    "scipy",
    "tqdm",
    "requests",
    "huggingface_hub",
    "safetensors",
    "omegaconf",
    "plyfile",
    "trimesh",
    "einops",
    "jaxtyping",
    "typeguard",
    "open3d>=0.18.0",
    "accelerate",
    "diffusers>=0.36.0",
    "transformers>=4.40.0",
    "bitsandbytes>=0.43.0",
    "optimum-quanto>=0.2.4",
    "torchao",
    "imageio[ffmpeg]",
    "kornia",
]

[project.optional-dependencies]
gsplat = []
fp8 = ["torchao"]
colmap = ["pycolmap==3.10.0"]
video = ["moviepy==1.0.3"]
skyseg = ["onnxruntime"]

[project.urls]
Repository = "https://github.com/AHEKOT/ComfyUI_HYWorld2"
Documentation = "https://github.com/AHEKOT/ComfyUI_HYWorld2/wiki"
"Bug Tracker" = "https://github.com/AHEKOT/ComfyUI_HYWorld2/issues"

[tool.comfy]
PublisherId = "vnccs-hyworld2"
DisplayName = "HY-World 2.0 — WorldMirror 3D"
Icon = ""
